[tool.poetry]
name = "textinimage"
version = "0.1.0"
description = ""
authors = ["Curtis Turner <cjturner714@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
